# kmett-taxonomy

./: .gitignore  README.md  stack.yaml
control-comonad/: CHANGELOG.md  control-comonad.cabal
control-lens-combinators/: CHANGELOG.md  control-lens-combinators.cabal
control-lens-combinators-base/: CHANGELOG.md  control-lens-combinators-base.cabal
control-lens-prism/: CHANGELOG.md  control-lens-prism.cabal
control-lens-setter-base/: CHANGELOG.md  control-lens-setter-base.cabal
control-monad-codensity/: CHANGELOG.md  control-monad-codensity.cabal
control-monad-reader-class/: CHANGELOG.md  control-monad-reader-class.cabal
control-monad-reader-class/src/Control/Monad/Reader/: Class.hs
control-monad-state-class/: CHANGELOG.md  control-monad-state-class.cabal
data-bifunctor-clown/: CHANGELOG.md  data-bifunctor-clown.cabal
data-bifunctor-join/: CHANGELOG.md  data-bifunctor-join.cabal
data-bifunctor-joker/: CHANGELOG.md  data-bifunctor-joker.cabal
data-distributive/: CHANGELOG.md  data-distributive.cabal
data-foldable-withindex/: CHANGELOG.md  data-foldable-withindex.cabal
data-functor-adjunction/: CHANGELOG.md  data-functor-adjunction.cabal
data-functor-alt/: CHANGELOG.md  data-functor-alt.cabal
data-functor-apply/: CHANGELOG.md  data-functor-apply.cabal
data-functor-bind/: CHANGELOG.md  LICENSE  data-functor-bind.cabal
data-functor-contravariant-conclude/: CHANGELOG.md  data-functor-contravariant-conclude.cabal
data-functor-contravariant-decidable/: CHANGELOG.md  data-functor-contravariant-decidable.cabal
data-functor-extend/: CHANGELOG.md  (+1 more)
(+88 files in other folders)
