cabal-version:       2.2
-- Initial package description 'control-monad-reader-class.cabal' generated
--  by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                control-monad-reader-class
version:             0.0.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Control.Monad.Reader.Class
  -- other-modules:
  other-extensions:    CPP, FunctionalDependencies, FlexibleInstances, UndecidableInstances, ScopedTypeVariables, DefaultSignatures
  build-depends:       base ^>=4.12.0.0, transformers ^>=0.5.6.2, data-distributive, data-profunctor-types-star
  hs-source-dirs:      src
  default-language:    Haskell2010
